--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,23 @@
     .main-container {
       max-width: 1200px;
     }
+
+    /* Fix auth screen positioning to prevent layout issues */
+    #auth-screen {
+      position: fixed !important;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 9999;
+      background-color: #f8f9fa;
+    }
+
+    /* Ensure auth screen is completely removed when hidden */
+    #auth-screen[style*="display: none"] {
+      display: none !important;
+      visibility: hidden !important;
+    }
   </style>
 </head>
 
@@ -227,9 +244,13 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
     crossorigin="anonymous"></script>
+
 
   <script src="app.js"></script>
 </body>
